--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
       "presets": ["next/babel"]
     },
     "test": {
-      "presets": ["env", "react"]
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
+      "plugins": ["dynamic-import-node"]
     }
   }
 }
