--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "postinstall": "husky install",
     "commit": "cz",
-    "test": "jest --watch",
+    "test": "jest --config ./jest.config.js",
     "test:ci": "jest --ci"
   },
   "lint-staged": {
@@ -34,6 +34,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "7.17.8",
+    "@babel/node": "7.16.8",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-conventional": "13.2.0",
     "@tailwindcss/forms": "0.5.0",
@@ -47,22 +51,27 @@
     "@typescript-eslint/parser": "5.1.0",
     "autoprefixer": "10.3.7",
     "babel-jest": "27.5.1",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
+    "babel-loader": "8.2.4",
+    "babel-plugin-dynamic-import-node": "2.3.3",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-jest": "26.1.3",
+    "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-testing-library": "5.1.0",
     "husky": "7.0.2",
     "jest": "27.5.1",
+    "jest-next-dynamic": "1.0.1",
+    "jest-raw-loader": "1.0.1",
     "lint-staged": "11.2.3",
     "postcss": "8.3.11",
     "prettier": "2.4.1",
     "tailwindcss": "2.2.17",
+    "ts-jest": "27.1.4",
     "typescript": "4.4.4"
   },
   "config": {
