--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "postinstall": "husky install",
     "commit": "cz",
-    "test": "jest --config ./jest.config.js",
+    "test": "jest",
     "test:ci": "jest --ci"
   },
   "lint-staged": {
@@ -67,6 +67,7 @@
     "jest": "27.5.1",
     "jest-next-dynamic": "1.0.1",
     "jest-raw-loader": "1.0.1",
+    "jest-transform-stub": "2.0.0",
     "lint-staged": "11.2.3",
     "postcss": "8.3.11",
     "prettier": "2.4.1",
