--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-testing-library": "5.1.0",
     "husky": "7.0.2",
     "jest": "27.5.1",
+    "jest-fetch-mock": "3.0.3",
     "jest-next-dynamic": "1.0.1",
     "jest-raw-loader": "1.0.1",
     "jest-transform-stub": "2.0.0",
